--- a/responsive-Login-Form/style.css
+++ b/responsive-Login-Form/style.css
@@ -24,6 +24,16 @@ main {
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
 }
 
+main::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(-45deg, #df4adf, #520852);
+    z-index: 6;
+}
+
 .sigin-signup {
     position: absolute;
     top: 0;
@@ -33,6 +43,7 @@ main {
     display: flex;
     align-items: center;
     justify-content: space-around;
+    z-index: 5;
 }
 
 form {
@@ -90,8 +101,82 @@ form {
     font-weight: 600;
     margin: 10px 0;
     text-transform: uppercase;
+    cursor: pointer;
 }
 
 .btn:hover {
     background: #c03cc0;
+}
+
+.social-text {
+    margin: 10px 0;
+    font-size: 16px;
+}
+
+.social-media {
+    display: flex;
+    justify-content: center;
+}
+
+.social-icon {
+    height: 45px;
+    width: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #444;
+    border: 1px solid #444;
+    border-radius: 50px;
+    margin: 0 5px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.social-icon:hover {
+    color: #df4adf;
+    border-color: #df4adf;
+}
+
+.panels-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+.panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
+    width: 35%;
+    min-width: 238px;
+    padding: 0 10px;
+    text-align: center;
+
+    z-index: 6;
+}
+
+.panel h3 {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.panel p {
+    font-size: 15px;
+    padding: 10px 0;
+}
+
+.content {
+    color: #fff;
+}
+
+.image {
+    width: 100%;
 }
