--- a/responsive-Login-Form/style.css
+++ b/responsive-Login-Form/style.css
@@ -15,23 +15,27 @@ body {
     background: #444;
 }
 
-main {
+.container {
     position: relative;
     background: #fff;
     width: 70vw;
     height: 80vh;
     border-radius: 15px;
     box-shadow: 0 4px 20px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
+    overflow: hidden;
 }
 
-main::before {
+.container::before {
     content: "";
     position: absolute;
     top: 0;
+    left: -50%;
     width: 100%;
     height: 100%;
     background: linear-gradient(-45deg, #df4adf, #520852);
     z-index: 6;
+    transform: translateX(100%);
+    transition: 1s ease-in-out;
 }
 
 .sigin-signup {
@@ -54,6 +58,18 @@ form {
     width: 40%;
     min-width: 238px;
     padding: 0 10px;
+}
+
+form.sign-in-form {
+    opacity: 1;
+    transition: 0.5s ease-in-out;
+    transition-delay: 1s;
+}
+
+form.sign-up-form {
+    opacity: 0;
+    transition: 0.5s ease-in-out;
+    transition-delay: 1s;
 }
 
 .title {
@@ -82,10 +98,11 @@ form {
 
 .input-field input {
     flex: 5;
-    background: white; /*none*/
+    background: none;
     border: none;
     outline: none;
     width: 100%;
+    height: 100%;
     font-size: 18px;
     font-weight: 600;
     color: #444;
@@ -159,8 +176,11 @@ a {
     min-width: 238px;
     padding: 0 10px;
     text-align: center;
-
     z-index: 6;
+}
+
+.left-panel {
+    pointer-events: none;
 }
 
 .panel h3 {
@@ -175,8 +195,97 @@ a {
 
 .content {
     color: #fff;
+    transition: 1.1s ease-in-out;
+    transition-delay: 0.5s;
 }
 
 .image {
     width: 100%;
+    transition: 1.1s ease-in-out;
+    transition-delay: 0.4s;
+}
+
+.left-panel .image, .left-panel .content {
+    transform: translateX(-200%);
+}
+
+.right-panel .image, .right-panel .content {
+    transform: translateX(0);
+}
+
+.account-text {
+    display: none;
+}
+
+/*Animation*/
+
+.container.sign-up-mode::before {
+    transform: translateX(0);
+}
+
+.container.sign-up-mode .right-panel .image,
+.container.sign-up-mode .right-panel .content{
+    transform: translateX(200%);
+}
+
+.container.sign-up-mode .left-panel .image,
+.container.sign-up-mode .left-panel .content{
+    transform: translateX(0);
+}
+
+.container.sign-up-mode form.sign-in-form {
+    opacity: 0;
+}
+
+.container.sign-up-mode form.sign-up-form {
+    opacity: 1;
+}
+
+.container.sign-up-mode .right-panel {
+    pointer-events: none;
+}
+
+.container.sign-up-mode .left-panel {
+    pointer-events: all;
+}
+
+/*Responsive*/
+
+@media (max-width:779px) {
+    .container {
+        width: 100vw;
+        height: 100vh;
+    }
+}
+
+@media (max-width:635px) {
+    .container::before {
+        display: none;
+    }
+    form {
+        width: 80%;
+    }
+    form.sign-up-form {
+        display: none;
+    }
+    .container.sign-up-mode2 form.sign-up-form{
+        display: flex;
+        opacity: 1;
+    }
+    .container.sign-up-mode2 form.sign-in-form{
+        display: none;
+    }
+    .panels-container {
+        display: none;
+    }
+    .account-text {
+        display: initial;
+        margin-top: 30px;
+    }
+}
+
+@media (max-width:320px) {
+    form {
+        width: 90%;
+    }
 }
