--- a/slideshow-with-HTML-CSS/styles/style.css
+++ b/slideshow-with-HTML-CSS/styles/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     height: 100vh;
-    width: 100vh;
+    width: 100vw;
     background: linear-gradient(72deg, #3DEBB0 1%, #8956F3 99%);
 }
 
@@ -17,6 +17,7 @@ body {
     width: 935px;
     border-radius: 20px;
     overflow: hidden;
+
     position: absolute;
     top: 50%;
     left: 50%;
