Upgrade index and css

--- a/slider-with-HTML-CSS-JS/style.css
+++ b/slider-with-HTML-CSS-JS/style.css
@@ -29,10 +29,31 @@ body {
 .slide {
     width: 25%;
     position: relative;
+    transition: 3s;
 }
 
 .slide img {
     width: 800px;
+}
+
+.navigation-auto div{
+    border: 2px solid #0d7ec9;
+    padding: 5px;
+    border-radius: 50px;
+    cursor: pointer;
+    transition: .5s;
+}
+
+.navigation-auto {
+    position: absolute;
+    width: 800px;
+    margin-top: 360px;
+    display: flex;
+    justify-content: center;
+}
+
+.navigation-auto div:not(:last-child) {
+    margin-right: 40px;
 }
 
 .manual-navigation {
@@ -44,9 +65,46 @@ body {
 }
 
 .manual-btn {
-    border: 2px solid #fff;
+    border: 2px solid #2b2b2b;
     padding: 5px;
     border-radius: 10px;
     cursor: pointer;
-    transition: 1s;
+    transition: .5s;
 }
+
+.manual-btn:not(:last-child) {
+    margin-right: 40px;
+}
+
+.manual-btn:hover {
+    background-color: #b1b1b1a4;
+}
+
+#radio1:checked ~.first{
+    margin-left: 0;
+}
+#radio1:checked ~.navigation-auto .auto-btn1 {
+    background-color: #fff;
+}
+
+#radio2:checked ~.first{
+    margin-left: -25%;
+}
+#radio2:checked ~.navigation-auto .auto-btn2 {
+    background-color: #fff;
+}
+
+#radio3:checked ~.first{
+    margin-left: -50%;
+}
+#radio3:checked ~.navigation-auto .auto-btn3 {
+    background-color: #fff;
+}
+
+#radio4:checked ~.first{
+    margin-left: -75%;
+}
+#radio4:checked ~.navigation-auto .auto-btn4 {
+    background-color: #fff;
+}
+
