--- a/projeto-site-com-grid/styles/style.css
+++ b/projeto-site-com-grid/styles/style.css
@@ -33,6 +33,30 @@ img {
     ;
 }
 
+@media (max-width: 1200px) {
+    .estrutura {
+        grid-template-areas:
+            "header header header"
+            "sidenav content content"
+            "sidenav anuncios anuncios"
+            "footer footer footer"
+        ;
+    }
+}
+
+@media (max-width: 760px) {
+    .estrutura {
+        grid-template-columns: 100%;
+        grid-template-areas:
+            "header"
+            "sidenav"
+            "content"
+            "anuncios"
+            "footer" 
+        ;
+    }
+}
+
 /* HEADER */
 
 .header {
@@ -71,6 +95,22 @@ flex-wrap: wrap;
     margin-left: 30px;
 }
 
+@media (max-width: 760px) {
+    .header {
+        grid-template-columns: auto;
+    }
+    .logo {
+        margin-bottom: 20px;
+    }
+    .header nav a {
+        font-size: 1em;
+    }
+    .header li + li {
+        margin-left: 10px;
+    }
+}
+
+
 /* SIDENAV */
 
 .sidenav {
@@ -94,6 +134,27 @@ flex-wrap: wrap;
 .sidenav li a:hover {
     background: #B07DFB;
 }
+
+@media (max-width:760px) {
+    .sidenav {
+        overflow-x: auto;
+        -webkit-overflow-scrolling: touch;
+        -ms-overflow-style: -ms-autohiding-scrollbar;
+    }
+    .sidenav ul {
+        display: flex;
+    }
+    .sidenav li {
+        flex: 1 0 60px;
+    }
+    .sidenav {
+        padding: 0 30px;
+    }
+    .sidenav li a {
+        margin: 30px 30px 30px 0;
+    }
+}
+
 
 /* CONTENT */
 
