--- a/gridLayout-And-Flexbox/frame2/style.css
+++ b/gridLayout-And-Flexbox/frame2/style.css
@@ -46,19 +46,42 @@ img {
     padding: 10px;
 }
 
-/* CSS Flexbox 1 */
-
-.flex {
-    display: flex;
-    flex-wrap: wrap;
-    max-width: 800px;
-    margin: 0 auto;
-}
-
-.flex > div {
-    flex: 1 1 200px;
-    margin: 10px;
-}
-
 /* CSS GRID 1 */
 
+.grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    max-width: 800px;
+    margin: 0 auto;
+    gap: 20px;
+    padding: 10px;
+}
+
+.grid > div:nth-child(n + 4) {
+    background: blue;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 10px;
+    align-items: center;
+}
+
+.grid > div.anuncio {
+    grid-column: 1;
+    grid-row: 2 / 5;
+    display: block;
+    background: tomato;
+}
+
+@media (max-width:600px) {
+    .grid {
+        grid-template-columns: repeat(2, 1fr);
+    }
+    .grid > div:nth-child(n + 4) {
+        display: block;
+    }
+    .grid > div.anuncio {
+        grid-column: auto;
+        grid-row: auto;
+        order: -1;
+    }
+}
