--- a/gridLayout-And-Flexbox/frame3/style.css
+++ b/gridLayout-And-Flexbox/frame3/style.css
@@ -46,5 +46,32 @@ img {
     padding: 10px;
 }
 
-/* CSS GRID 1 */
+/* CSS GRID */
 
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 200px;
+    gap: 20px;
+    max-width: 800px;
+    padding: 10px;
+    margin: 0 auto;
+}
+
+.sidebar > div{
+    margin-bottom: 10px;
+}
+
+@media (max-width:600px) {
+    .grid {
+        grid-template-columns: 1fr;
+    }
+    .sidebar {
+        display: flex;
+        overflow: scroll;
+    }
+
+    .sidebar > div {
+        flex: 1 0 200px;
+        margin: 0 10px;
+    }
+}
