--- a/gridLayout-And-Flexbox/frame4/style.css
+++ b/gridLayout-And-Flexbox/frame4/style.css
@@ -48,3 +48,34 @@ img {
 
 /* CSS GRID */
 
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 20px;
+    margin: 0 auto;
+    max-width: 800px;
+    padding: 10px;
+}
+
+.grid-item:nth-child(1) {
+    grid-row: 1 / 3;
+}
+
+.grid-item {
+    display: grid;
+}
+
+.grid-item img {
+    grid-column: 1;
+    grid-row: 1/3;
+    align-self: end;
+}
+
+.grid-item p {
+    background: rgba(0, 0, 0, 0.6);
+    padding: 10px;
+    color: white;
+    grid-column: 1;
+    grid-row: 2;
+    align-self: end;
+}
